--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage" : "https://ardhiyan-hakim.github.io/React-Pemula",
   "name": "note-app",
   "version": "0.1.0",
   "private": true,
